--- a/eventos.html
+++ b/eventos.html
@@ -30,8 +30,8 @@
                 <a href="eventos.html" class="nav-link active">Eventos</a>
             </nav>
             <div class="cabecalho-acoes">
-                <a href="#" class="botao botao-login me-2" data-bs-toggle="modal" data-bs-target="#modalLogin">Login</a>
-                <a href="#" class="botao botao-registrar">Registrar</a>
+                <a href="Pagina de login.html" class="botao botao-login me-2">Login</a>
+                <a href="Pagina de perfil.html" class="botao botao-registrar">Perfil</a>
             </div>
         </div>
     </header>
