--- a/Regras.html
+++ b/Regras.html
@@ -15,7 +15,6 @@
 </head>
 
 <body>
-
     <header class="cabecalho-site">
         <div class="container d-flex justify-content-between align-items-center">
             <div class="logo d-flex align-items-center">
@@ -120,6 +119,16 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
+    
+    <script>
+    document.addEventListener('DOMContentLoaded', function () {
+        const logoDiv = document.querySelector('.logo');
+        if (logoDiv) {
+            logoDiv.addEventListener('click', function () {
+                window.location.href = 'index.html';
+            });
+        }
+    });</script>
 </body>
 
 </html>
