Add Cadastrar, modified Pagina de login, pagina de perfil

--- a/Pagina de login.html
+++ b/Pagina de login.html
@@ -15,6 +15,10 @@
             </div>
         
             <div class="col d-flex flex-column justify-content-center align-items-center">
+                <div class="meu-form-item px-1 mb-3"> 
+                    <a href="index.html" class="text-decoration-underline" style="font-size: 1.1rem;">Voltar</a> 
+                </div>
+
                 <h1 class="mb-4" style="font-size: 2rem;">Login</h1> 
 
                 <div class="meu-form-item"> 
@@ -37,7 +41,7 @@
                 </div>
 
                 <div class="d-flex justify-content-between w-75 pt-2">
-                    <a href="#" class="text-decoration-underline" style="font-size: 1.1rem;">Cadastrar</a> 
+                    <a href="Cadastrar.html" class="text-decoration-underline" style="font-size: 1.1rem;">Cadastrar</a> 
                     <a href="#" class="text-decoration-underline" style="font-size: 1.1rem;">Esqueci a Senha</a> 
                 </div>
             </div> 
