--- a/Cadastrar.html
+++ b/Cadastrar.html
@@ -5,6 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Tela de Cadastro</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script
+        src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js">
+    </script>
+
+    <script 
+        src="Cadastrar.js">
+    </script>
+
+    <style>
+        .borda-vermelha {
+            border: 2px solid red !important;
+        }
+    </style>
 </head>
 <body class="bg-light">
     <div class="container mt-5">
@@ -29,14 +42,25 @@
                                 <input type="password" class="form-control" id="senha" required>
                             </div>
                             <div class="mb-3">
-                                <label for="senha" class="form-label">Confirmar senha</label>
-                                <input type="password" class="form-control" id="senha" required>
+                                <label for="senha2" class="form-label">Confirmar senha</label>
+                                <input type="password" class="form-control" id="senha2" required>
                             </div>
                         </form>
                     </div>
                 
                     <div class="card-footer text-center">
-                        <button type="submit" class="btn btn-primary">Cadastrar</button>
+                        <button type="submit" id="botaoCadastro" class="btn btn-primary">Cadastrar</button>
+
+                        <script>
+                            $(document).ready(function() {
+                                $('#botaoCadastro').click(function() {
+                                    if (validarFormulario()) {
+                                        alert('Cadastro realizado com sucesso!');
+                                    }
+                                });
+                            });
+                        </script>  
+
                         <a href="Pagina de login.html" class="btn btn-secondary">Voltar</a>
                     </div>
                 </div>
